--- a/index.html
+++ b/index.html
@@ -7,20 +7,12 @@
     <title>Namaste React </title>
 </head>
 <body>
-    <div id="root"></div>
-      
-<script 
-crossorigin
- src="https://unpkg.com/react@18/umd/react.development.js"
- ></script>
+    <div id="root">
+        <h1>Tushar is here</h1>
+    </div>
 
-<script 
-crossorigin 
-src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-></script>
-    
 
-<script src="App.js"></script>
+<script type="module" src="src/App.js"></script>
 
 
 </body>
